--- a/wasipage.html
+++ b/wasipage.html
@@ -78,13 +78,10 @@
 
   <button onclick="window.open(`/qrr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`https://github.com/wasixd/WASI-MD`)" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://github.com/wasixd/WASI-MD-PLUGINS`)" class="btn">Plugins</button>
-  <button onclick="window.open(`https://wa.me/923192173398`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/L14FfkAgFCN9eXGe5Sqjqt`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VaDK8ZUDjiOhwFS1cP2j`)" class="btn">Wa Channel</button>
-  <button onclick="window.open(`https://instagram.com/itx_mee_wasi`)" class="btn">Instagram</button>
-  <button onclick="window.open(`https://youtube.com/@wasitech1`)" class="btn">Youtube</button>
+  <button onclick="window.open(`https://github.com/carlydopeboii/SHADOW-MD-BOT`)" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://wa.me/18098042883`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`https://instagram.com/dopeboiicarly`)" class="btn">Instagram</button>
+  <button onclick="window.open(`www.youtube.com/@Shadow_wrld-f9z`)" class="btn">Youtube</button>
   
 
 </body>
